--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/routers": "^6.1.0",
     "@react-navigation/stack": "^6.2.1",
+    "@react-native-async-storage/async-storage": "^1.15.0",
     "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "expo": "~50.0.14",
     "expo-camera": "^14.1.3",
     "expo-font": "~11.10.3",
